# ChangeLog for dev-perl/JSON-XS
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/JSON-XS/ChangeLog,v 1.23 2010/01/08 15:40:22 tove Exp $

*JSON-XS-2.2.7 (08 Jan 2010)

  08 Jan 2010; Torsten Veller <tove@gentoo.org> +JSON-XS-2.2.7.ebuild:
  Version bump

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -JSON-XS-2.2.5.ebuild:
  Cleanup

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org> JSON-XS-2.2.6.ebuild:
  Marked ~x86-solaris, bug #296509

*JSON-XS-2.2.6 (12 Oct 2009)

  12 Oct 2009; Torsten Veller <tove@gentoo.org> +JSON-XS-2.2.6.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -JSON-XS-2.2.3.2.ebuild,
  -JSON-XS-2.2.4.ebuild:
  Cleanup

*JSON-XS-2.2.5 (25 Aug 2009)

  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org> +JSON-XS-2.2.5.ebuild:
  Version bump via perl-bump experimental tool.

*JSON-XS-2.2.4 (30 May 2009)

  30 May 2009; Torsten Veller <tove@gentoo.org> +JSON-XS-2.2.4.ebuild:
  Version bump

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -JSON-XS-2.2.3.1.ebuild,
  -JSON-XS-2.2.3.1.1.ebuild:
  Cleanup

*JSON-XS-2.2.3.2 (23 Feb 2009)

  23 Feb 2009; Robin H. Johnson <robbat2@gentoo.org>
  +JSON-XS-2.2.3.2.ebuild:
  Version bump via perl-bump experimental tool.

*JSON-XS-2.2.3.1.1 (20 Feb 2009)

  20 Feb 2009; Torsten Veller <tove@gentoo.org> +JSON-XS-2.2.3.1.1.ebuild:
  Version bump

  30 Dec 2008; Torsten Veller <tove@gentoo.org> -JSON-XS-2.2.2.2.2.ebuild,
  -JSON-XS-2.2.3.ebuild:
  Cleanup

*JSON-XS-2.2.3.1 (21 Nov 2008)

  21 Nov 2008; Torsten Veller <tove@gentoo.org> +JSON-XS-2.2.3.1.ebuild:
  Version bump

*JSON-XS-2.2.3 (30 Sep 2008)

  30 Sep 2008; Torsten Veller <tove@gentoo.org> +JSON-XS-2.2.3.ebuild:
  Version bump

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -JSON-XS-1.3.ebuild,
  -JSON-XS-1.11.ebuild, -JSON-XS-1.21.ebuild, -JSON-XS-1.22.ebuild,
  -JSON-XS-1.24.ebuild, -JSON-XS-1.52.ebuild, -JSON-XS-2.2.ebuild:
  Cleanup
