@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/JSON-XS
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/JSON-XS/ChangeLog,v 1.23 2010/01/08 15:40:22 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/JSON-XS/ChangeLog,v 1.24 2010/03/14 15:31:53 tove Exp $
+
+*JSON-XS-2.2.8 (14 Mar 2010)
+
+  14 Mar 2010; Torsten Veller <tove@gentoo.org> +JSON-XS-2.2.8.ebuild:
+  Version bump
 
 *JSON-XS-2.2.7 (08 Jan 2010)
 
